--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,16 +7,22 @@ body {
 
 .container {
    padding: 0.875rem;
+   padding-bottom: 0;
+   margin-bottom: 0;
 }
 
 footer {
     text-align: center;
     font-style: italic;
-    font-size: 0.75rem;
+    font-size: 0.75rem; 
+    background-color: #2e3e4f;
 }
 
 footer p {
     margin-top: 1.2rem;
+    color: white;
+    padding: .5rem 0;
+    margin-bottom: 0;
 }
 
 /* HEADER STYLES */
@@ -34,6 +40,11 @@ h1 {
     font-size: 1.35rem;
     padding: 1.25rem 0;
     text-transform: uppercase;
+}
+
+.section-one {
+    background-color: #c5c5c5;
+    border-radius: 5px;
 }
 
 /* SECTION ONE */
@@ -105,13 +116,17 @@ input {
     padding: 0.6rem 0.3rem;
     border: none;
     border-radius: 5px;
+    transition: ease-in-out, background-color .45s ease-in-out;
+    font-size: 0.85rem;
 }
 
 :focus {
-    outline-offset: -2;
+    outline-offset: -2px;
     outline-color: #2e3e4f;
     outline-style: auto;
     outline-width: 5px;
+    background-color: #2e3e4f;
+    color: white;
 }
 
 ::placeholder {
@@ -149,10 +164,12 @@ select {
     width: 100%;
     border: none;
     color: #67696b;
-    padding: 0.6rem 0.3rem;
+    padding: 0.7rem 0.3rem;
     margin: 0.875rem 0;
     font-size: 0.85rem;
-    color: #bbbaba; 
+    color: #bbbaba;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
 
 button {
